tdf#90673:FILESAVE:PPTX Paragraph text direction right-to-left is not exported

Problem Description:
After RT 'rtl' tag of <a:pPr> are not exported

XML Diff:
Original :
<a:pPr marL="457200" indent="-457200" algn="r" rtl="1">
RT :
<a:pPr algn="r">

Change-Id: I307bc748c73127c311cabd127bb98e43bd298271